@@ -2,9 +2,6 @@
 	<Binding name="HELPMEPLAY_OPEN_SETTINGS" header="HELPMEPLAY" category="|cff00FFFFHelpMePlay|r">
 		HelpMePlayKeyPressHandler(GetBindingKey("HELPMEPLAY_OPEN_SETTINGS"))
 	</Binding>
-	<Binding name="HELPMEPLAY_LEARN_ALL_TRANSMOG" category="|cff00FFFFHelpMePlay|r">
-		HelpMePlayKeyPressHandler(GetBindingKey("HELPMEPLAY_LEARN_ALL_TRANSMOG"))
-	</Binding>
 	<Binding name="HELPMEPLAY_CALCULATE_REAGENTS" category="|cff00FFFFHelpMePlay|r">
 		HelpMePlayKeyPressHandler(GetBindingKey("HELPMEPLAY_CALCULATE_REAGENTS"))
 	</Binding>
